--- a/kotlin-native/backend.native/tests/build.gradle
+++ b/kotlin-native/backend.native/tests/build.gradle
@@ -978,6 +978,11 @@ if (PlatformInfo.isAppleTarget(project)) {
         it.extraOpts "-Xsource-compiler-option", "-fobjc-arc"
         it.extraOpts "-Xsource-compiler-option", "-ObjC++"
     }
+
+    createInterop("kt62920") {
+        it.defFile 'interop/objc/kt62920/objclib.def'
+        it.headers "$projectDir/interop/objc/kt62920/objclib.h"
+    }
 }
 
 createInterop("exceptions_throwThroughBridge") {
@@ -1132,6 +1137,12 @@ if (PlatformInfo.isAppleTarget(project)) {
             '-opt-in=kotlin.native.internal.InternalForKotlinNative', // MemoryUsageInfo is internal
             '-Xbinary=gcSchedulerType=manual', // This test requires very careful timing when GC can happen
         ]
+    }
+
+    // Works best with the aggressive scheduler.
+    interopTest("interop_kt62920") {
+        source = 'interop/objc/kt62920/main.kt'
+        interop = 'kt62920'
     }
 }
 
