--- a/kotlin-native/backend.native/build.gradle
+++ b/kotlin-native/backend.native/build.gradle
@@ -158,6 +158,7 @@ dependencies {
     compilerApi project(":native:objcexport-header-generator")
     compilerApi project(":native:objcexport-header-generator-k1")
     compilerApi project(":native:base")
+    compilerApi project(":native:config.native")
 
     compilerImplementation project(":kotlin-compiler")
     compilerApi project(":native:kotlin-native-utils")
