[K/N] Apply plugins in plugins block.

--- a/kotlin-native/Interop/Skia/build.gradle
+++ b/kotlin-native/Interop/Skia/build.gradle
@@ -7,7 +7,9 @@ buildscript {
     apply from: "$rootDir/kotlin-native/gradle/kotlinGradlePlugin.gradle"
 }
 
-apply plugin: 'kotlin'
+plugins {
+    id "org.jetbrains.kotlin.jvm"
+}
 
 dependencies {
     implementation project(":kotlin-native:Interop:Indexer")
