--- a/kotlin-native/backend.native/build.gradle
+++ b/kotlin-native/backend.native/build.gradle
@@ -5,7 +5,6 @@
 
 import org.jetbrains.kotlin.gradle.tasks.KotlinCompilationTask
 import org.jetbrains.kotlin.PlatformInfo
-import org.jetbrains.kotlin.cpp.CppConsumerPlugin
 import org.jetbrains.kotlin.cpp.CppUsage
 import org.jetbrains.kotlin.cpp.DependencyHandlerExKt
 import org.jetbrains.kotlin.gradle.dsl.JvmTarget
@@ -16,11 +15,13 @@ buildscript {
     apply from: "../../kotlin-native/gradle/kotlinGradlePlugin.gradle"
 }
 
-apply plugin: 'java'
-apply plugin: 'kotlin'
-apply plugin: "native-interop-plugin"
-apply plugin: "maven-publish"
-apply plugin: CppConsumerPlugin
+plugins {
+    id "java"
+    id "org.jetbrains.kotlin.jvm"
+    id "native-interop-plugin"
+    id "maven-publish"
+    id "kn-cpp-base"
+}
 
 sourceSets {
     compiler {
