--- a/kotlin-native/backend.native/tests/build.gradle
+++ b/kotlin-native/backend.native/tests/build.gradle
@@ -14,20 +14,12 @@ import org.jetbrains.kotlin.konan.target.KonanTarget
 
 import java.util.regex.Pattern
 
-buildscript {
-    repositories {
-        mavenCentral()
-
-        maven {
-            url project.bootstrapKotlinRepo
-        }
-    }
+plugins {
+    id "kotlin.native.build-tools-conventions"
+    id "konan"
+    id "org.jetbrains.kotlin.jvm"
+    id "native-dependencies"
 }
-
-apply plugin: 'konan'
-apply plugin: 'kotlin'
-apply plugin: 'kotlin.native.build-tools-conventions'
-apply plugin: 'native-dependencies'
 
 configurations {
     cli_bc
